# adk-calendar

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  env.template  main.py  otel-config.yaml  pyproject.toml
.idx/: dev.nix
agent-tests/credential_agent/: prompt.py
agent-tests/normal_agent/: agent.py
agents/aws_caption_generation/: agent.py  prompt.py
agents/calendar_agent/: agent.py
agents/calendar_agent/sub_agent/agenda_task/: prompt.py
agents/calendar_agent/sub_agent/event/: agent.py
agents/calendar_agent/tools/: auth.py
agents/credential_agent/: agent.py
agents/firebase_studio/: README.md  agent.py
agents/multi_calendar_agent/: agent.py  prompt.py
agents/multi_calendar_agent/sub_agent/agenda_discussion/: agent.py
agents/multi_calendar_agent/sub_agent/agenda_task/: agent.py
agents/normal_agent/: agent.py  tools.py
agents/research/: agent.py  prompt.py
agents/simple_calendar_agent/: agent.py
agents/sore/: agent.py  prompt.py
agents/sore_audio/: agent.py
authentications/: __init__.py  auth.py
calendar_agent/: agent.py  context.py
calendar_agent/sub_agent/agenda_discussion/: agent.py  prompt.py
calendar_agent/sub_agent/agenda_task/: agent.py
calendar_agent/sub_agent/event/: agent.py  prompt.py
instrumentation/: otel-config.yaml
mcp_servers/: __init__.py  calendar_built_in.py  calendar_toolset.py  datetime.py  google_calendar.py  google_workspace.py  mcp_calendar_remote.py  paper_mcp_server.py  time.py
mcp_servers/specs/: calendar.json  calendar.yaml
tools/: __init__.py  get_current_datetime.py  greetings.py
(+1 files in other folders)
