[project]
name = "calendar-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk==1.15.1",
    "mcp-datetime>=0.1.4",
    "openlit==1.34.26",
    "paper-search-mcp>=0.1.3",
    "psycopg2-binary>=2.9.10",
    "pytz>=2025.2",
    "uvicorn>=0.34.3",
]
